# fluentcli_web_services

./: .dockerignore  .env  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Design Plan.md  Dockerfile.backend  Dockerfile.management  Dockerfile.worker  ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  PR_DESCRIPTION.md  PR_DESCRIPTION_ENHANCEMENTS.md  README.md  RUST_ASYNC_TRAIT_FIX.md  codex_setup.sh  compiled_output.txt  docker-compose.yaml  readme.md  run_tests.sh  source_collector.sh  start.sh  test_amber_service.sh  test_apikeys_service.sh  test_chat_service.sh  test_docker_files_service.sh  test_fluentcli_service.sh  test_job_service.sh  test_llmproviders_service.sh  test_pipeline_service.sh  test_user_auth.sh  test_user_auth_service.sh  worker_entrypoint.sh
.github/workflows/: ci.yml
docs/: README.md  agent_programming_guide.md  collaborative_agent_plan.md  frontend_api_integration.md  frontend_component_design.md  frontend_implementation_examples.md  frontend_implementation_plan.md  frontend_integration_overview.md  frontend_integration_summary.md  frontend_testing_guide.md  function_calling_comparison.md  generic_function_calling_design.md  implementation_roadmap.md  mcp_integration_guide.md  rust_implementation_guide.md  tool_development_guide.md
fluent_web_servies_2/: Dockerfile.frontend
fluentcli_web_services/: Design Plan.md  Dockerfile.backend  Dockerfile.management  Dockerfile.worker  api_documentation.md  docker-compose.yaml  generate_migrations.sh  readme.md  start.sh  test_configuration_service.sh  test_fluentcli_service.sh  test_pipeline_service.sh  test_routes_service.sh  test_secure_vault_service.sh  test_user_llm_configs_service.sh  test_worker_service.sh
fluentcli_web_services/frontend/: Dockerfile.frontend  config.js  fix-api-url.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
fluentcli_web_services/fws-env/: Dockerfile  example.env
fluentcli_web_services/src/: routes.rs  schema.rs
fluentcli_web_services/worker_app/: Cargo.toml
frontend/: .env.development  .env.production  Dockerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: config.js
frontend/src/: App.vue  config.ts  main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
fws-env/: Dockerfile
migrations/: migration.rs
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2024-01-20-000001_add_mode_to_conversations/: down.sql
migrations/2024-05-19-000001_create_agents/: up.sql
migrations/2025-05-17-000002_create_agent_tables/: down.sql  up.sql
migrations/2025-05-20-000001_fix_messages_attachment_column/: down.sql  up.sql
migrations/2025-05-21-000001_add_reasoning_patterns_to_agents/: down.sql  (+1 more)
scripts/: setup_env.sh  start_dev.sh
src/: config.rs  custom_errors.rs  error.rs  lib.rs  main.rs  routes.rs  schema.rs
tests/: jwt_tests.rs  reasoning_patterns_tests.rs
worker_app/: Cargo.toml  Dockerfile  entrypoint.sh  start.sh
worker_app/desktop/openbox/: autostart  menu.xml  rc.xml
worker_app/desktop/tint2/: tint2rc
worker_app/src/: main.rs
worker_app/src/computer_use/: README.md  base.rs  computer.rs  mod.rs  tools.rs
worker_app/src/computer_use/tests/: mod.rs
worker_app/src/computer_use/tools/: execute_command.rs  file_operations.rs  followup_question.rs  mod.rs  site_inspector.rs
worker_app/src/handlers/: computer_use.rs  legacy.rs  mod.rs
(+300 files in other folders)
