[package]
name = "fws"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.44"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
jsonwebtoken = "9.3.0"
actix-web = "4.0"
env_logger = "0.11.5"
bcrypt = "0.15.1"