[package]
name = "fluent_web_services"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Fluent Web Services"

[dependencies]
# Web frameworks
actix-web = "4.3"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"

[[bin]]
name = "server"
path = "src/bin/server.rs"
