[package]
name = "worker_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
image = "0.24"
screenshots = "0.8"
enigo = "0.1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
