[package]
name = "worker_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
actix-cors = "0.6.4"
chrono = "0.4"
