[package]
name = "worker_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
actix-cors = "0.6.4"
chrono = "0.4"
async-trait = "0.1.74"
regex = "1.10.2"
glob = "0.3.1"
walkdir = "2.4.0"
chromiumoxide = { version = "0.5.7", features = ["tokio-runtime"] }
tempfile = "3.8.1"
base64 = "0.22.1"
